--- a/package.json
+++ b/package.json
@@ -4,13 +4,21 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "test": "vitest"
+    "test": "vitest",
+    "server:express": "tsnd ./main/http/express/server.ts",
+    "server:koa": "tsnd ./main/http/koa/server.ts"
   },
   "dependencies": {
+    "@koa/router": "^12.0.0",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.15",
+    "@types/koa": "^2.13.5",
+    "@types/koa-bodyparser": "^4.3.10",
+    "@types/koa__router": "^12.0.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "koa": "^2.14.1",
+    "koa-bodyparser": "^4.3.0",
     "prettier": "^2.8.3",
     "ts-node-dev": "^2.0.0",
     "typescript": "^4.9.4",
